--- a/style.css
+++ b/style.css
@@ -1,462 +1,558 @@
 /* FIRST */
 body {
-    font-family: "Quicksand", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
-    margin: 10;
-    padding: 0;
-    background-color: #f4f4f9;
-    color: #333;
+  font-family: "Quicksand", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  margin: 10;
+  padding: 0;
+  background-color: #f4f4f9;
+  color: #333;
 }
 
 header {
-    height: 500px;
-    color: white;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    border-radius: 25px;
-    background-size: cover;
-    text-shadow: 2px 2px 5px rgba(3, 15, 10, 10.7);
+  height: 500px;
+  color: white;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border-radius: 25px;
+  background-size: cover;
+  text-shadow: 2px 2px 5px rgba(3, 15, 10, 10.7);
 }
 
 .header-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #f8f8f8;
-    border-bottom: 1px solid #ddd;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #fafbfd;
+  border: 1px solid #ddd;
+  border-radius: 20px;
 }
 
 .logo {
-    height: 70px;
+  height: 70px;
 }
 
 .navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  gap: 20px;
 }
 
 .navbar li {
-    margin-left: 20px;
+  margin-left: 20px;
+  position: relative;
+}
+
+.navbar li:not(:last-child)::after {
+  content: "|";
+  position: absolute;
+  right: -15px; /* Place the line between the items */
+  color: #553535;
+  font-size: 20px;
+  font-style: bold;
 }
 
 .navbar a {
-    text-decoration: none;
-    color: #333;
-    font-size: larger;
+  text-decoration: none;
+  color: #333;
+  font-size: larger;
+  position: relative;
+  display: inline-block;
+  transition:
+    color 0.3s,
+    transform 0.3s;
+}
+.navbar a:hover {
+  color: #1d3652;
+  transform: scale(1.1);
+}
+
+.navbar a::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: -5px;
+  left: 0;
+  background-color: #1d3652;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+
+.navbar a:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 .header-content a {
-    position: relative;
-    display: inline-block;
-    transition: color 0.3s, transform 0.3s;
+  position: relative;
+  display: inline-block;
+  transition:
+    color 0.3s,
+    transform 0.3s;
 }
 
 .header-content a:hover {
-    color: #1d3652;
-    transform: scale(1.1);
+  color: #1d3652;
+  transform: scale(1.1);
 }
 
 .header-content a::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    bottom: -5px;
-    left: 0;
-    background-color: #1d3652;
-    visibility: hidden;
-    transform: scaleX(0);
-    transition: all 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: -5px;
+  left: 0;
+  background-color: #1d3652;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
 }
 
 .header-content a:hover::before {
-    visibility: visible;
-    transform: scaleX(1);
+  visibility: visible;
+  transform: scaleX(1);
 }
 
-
 header h1 {
-    margin: 0;
-    font-size: 4.5rem;
-    text-transform: uppercase;
-    font-weight: 700;
+  margin: 0;
+  font-size: 4.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
 }
 
 header p {
-    font-size: 1.4rem;
-    margin-top: 10px;
-    font-weight: 500;
-
+  font-size: 1.4rem;
+  margin-top: 10px;
+  font-weight: 500;
 }
 
-header h1, header p {
-    background: rgba(0, 0, 0, 0.255);
-    padding: 10px; 
-    border-radius: 15px; 
+header h1,
+header p {
+  background: rgba(0, 0, 0, 0.255);
+  padding: 10px;
+  border-radius: 15px;
 }
-
 
 .container {
-    width: 80%;
-    margin: 0 auto;
-
+  width: 80%;
+  margin: 0 auto;
 }
 
 #about {
-    padding: 40px 0;
-    margin-top: 90px;
-    text-align: center;
-    background-color: rgba(17, 60, 95, 0.21);
-    border-radius: 10px;
+  padding: 40px 0;
+  margin-top: 90px;
+  text-align: center;
+  background-color: rgba(17, 60, 95, 0.21);
+  border-radius: 10px;
 }
 
 #about h2 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #333;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #333;
 }
 
 .about-content {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-left: 40px;
 }
 
 .about-text {
-    flex: 1;
-    padding: 20px;
-    max-width: 600px;
+  flex: 1;
+  padding: 20px;
+  max-width: 600px;
 }
 
 .about-image {
-    flex: 1;
-    padding: 20px;
-    max-width: 600px;
+  flex: 1;
+  padding: 20px;
+  max-width: 600px;
 }
 
 .about-image img {
-    max-width: 100%;
-    border-radius: 10px;
+  max-width: 100%;
+  border-radius: 10px;
 }
 
 #about p {
-    font-size: 1.2rem;
-    line-height: 1.8;
-    color: #555;
+  font-size: 1.2rem;
+  line-height: 1.8;
+  color: #555;
 }
-
-
 
 .serviceBox {
-    background: rgb(62, 119, 115, 0.21);
-    margin: 50px;
-    margin-top: 90px;
-    color: white;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background: rgb(62, 119, 115, 0.21);
+  margin: 50px;
+  margin-top: 90px;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 #services {
-    padding: 40px 0;
+  padding: 40px 0;
 }
 
 #services h2 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 40px;
-    color: #041f30;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 40px;
+  color: #041f30;
 }
 
 #services .services-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px; 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .service {
-    background: #041f30;
-    padding: 20px;
-    color: white;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: calc(50% - 10px); 
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
+  background: #041f30;
+  padding: 20px;
+  color: white;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: calc(50% - 10px);
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
 }
 
 .service img {
-    width: 20%;
-    border-radius: 8px;
-    margin-right: 20px;
+  width: 20%;
+  border-radius: 8px;
+  margin-right: 20px;
 }
 
-.service li, h3 {
-    margin: 15px 0;
-    text-align: center;
+.service li,
+h3 {
+  margin: 15px 0;
+  text-align: center;
 }
 
 .service div {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
-
-
 @media (max-width: 768px) {
-    .service {
-        width: 100%;
-        margin: 10px 0;
-    }
+  .service {
+    width: 100%;
+    margin: 10px 0;
+  }
 
-    .containerbut {
-        padding: 20px;
-        text-align: center;
-    }
+  .containerbut {
+    padding: 20px;
+    text-align: center;
+  }
 }
 /* FIRST */
 
-
-
 /* SECOND */
 .containerbut {
-    display: flex;
-    justify-content: center;
-    gap: 200px;
+  display: flex;
+  justify-content: center;
+  gap: 200px;
 }
 
 .cta-container {
-    text-align: center;
-    background-color: rgb(188, 166, 135, 0.21);
-    padding: 40px;
-    border-radius: 10px;
-    margin: 90px;
-    width: 80%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  background-color: rgb(188, 166, 135, 0.21);
+  padding: 40px;
+  border-radius: 10px;
+  margin: 90px;
+  width: 80%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .cta-container h3 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #333;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #333;
 }
 
 .cta-container p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-    color: #555;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  color: #555;
 }
 
-
-
 footer {
-    background: rgba(20, 61, 98, 0.21);
-    text-align: center;
-    padding: 30px 0;
-    margin-top: 40px;
-    border-radius: 20px;
+  background: rgba(20, 61, 98, 0.21);
+  text-align: center;
+  padding: 30px 0;
+  margin-top: 40px;
+  border-radius: 20px;
 }
 
 footer p {
-    margin: 0;
+  margin: 0;
 }
 
 .button {
-    background-color: transparent;
-    padding: 15px 30px;
-    border: 5px solid #041f30;
-    border-radius: 15px; 
-    font-size: 1.1rem;
-    cursor: pointer;
-    box-shadow: 0 4px 10px rgba(0, 123, 255, 0.5); 
-    transition: all 0.3s ease;  
-    margin: 10px;
-    position: relative; 
-    display: inline-block; 
+  background-color: transparent;
+  padding: 15px 30px;
+  border: 5px solid #041f30;
+  border-radius: 15px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 123, 255, 0.5);
+  transition: all 0.3s ease;
+  margin: 10px;
+  position: relative;
+  display: inline-block;
 }
 
 .button:hover {
-    background-color: #123d6b;
-    color: white;
-    border-color: #08223e;  
+  background-color: #123d6b;
+  color: white;
+  border-color: #08223e;
 }
 
 .button::before {
-    content: '';
-    position: absolute;
-    top: -5px;
-    left: -5px;
-    right: -5px;
-    bottom: -5px;
-    border: 2px solid #5f87af;  
-    border-radius: 20px;  
-    opacity: 0.7;  
-    transition: opacity 0.3s ease, transform 0.3s ease;
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  border: 2px solid #5f87af;
+  border-radius: 20px;
+  opacity: 0.7;
+  transition:
+    opacity 0.3s ease,
+    transform 0.3s ease;
 }
 
 .button:hover::before {
-    transform: scale(1.1); 
-    opacity: 1;
+  transform: scale(1.1);
+  opacity: 1;
 }
 
 .button:after {
-    content: '🌍';
-    font-size: 1.5rem;
-    position: absolute;
-    right: -30px;  
-    top: 50%;
-    transform: translateY(-50%);
-    transition: right 0.3s ease;
+  content: "🌍";
+  font-size: 1.5rem;
+  position: absolute;
+  right: -30px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: right 0.3s ease;
 }
 
 .button:hover:after {
-    right: -40px;  
+  right: -40px;
 }
 
 .button-container-left {
-    text-align: left;
-    margin: 20px 0;
+  text-align: left;
+  margin: 20px 0;
 }
 
 .button-container-center {
-    text-align: center;
-    margin: 20px 0;
+  text-align: center;
+  margin: 20px 0;
 }
 
 .cards-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 20px;
-    padding: 2em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 2em;
 }
 
 .card {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-    transition: transform 0.3s, box-shadow 0.3s;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  transition:
+    transform 0.3s,
+    box-shadow 0.3s;
 }
 
 .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  transform: translateY(-5px);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .card-img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
 }
 
 .card-content {
-    padding: 15px;
+  padding: 15px;
 }
 
 .card h3 {
-    margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
 .card p {
-    color: #555;
+  color: #555;
 }
 
-
 .get-started {
-    text-align: center;
-    background-color: rgb(103, 153, 161, 0.21);
-    padding: 40px 20px;
-    border-radius: 10px;
-    margin: 20px auto;
-    width: 80%;
+  text-align: center;
+  background-color: rgb(103, 153, 161, 0.21);
+  padding: 40px 20px;
+  border-radius: 10px;
+  margin: 20px auto;
+  width: 80%;
 }
 
 .get-started h2 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
-    color: #333;
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #333;
 }
 
 .get-started p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
-    color: #555;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  color: #555;
 }
 /* SECOND */
 
-
-
 /* THIRD */
+
+.last-container {
+  text-align: center;
+  background-color: rgb(83, 132, 108, 0.21);
+  padding: 40px;
+  border-radius: 10px;
+  margin: 90px;
+  width: 80%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.last-container h3 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.last-container ul {
+  list-style-type: none;
+  padding: 20px;
+  background-color: rgb(83, 144, 168, 0.4);
+  border-radius: 20px;
+}
+
+.last-container p {
+  font-size: 1.2rem;
+  margin-bottom: 20px;
+  color: #555;
+}
+
 /* Gallery styles */
 .gallery {
-    display: flex;
-    overflow-x: auto;
-    padding: 10px;
-    white-space: nowrap;
-    border: 1px solid #ddd;
-    border-radius: 10px;
+  display: flex;
+  overflow-x: auto;
+  padding: 30px;
+  white-space: nowrap;
+  border: 1px solid #ddd;
+  border-radius: 10px;
 }
 
 .gallery img {
-    max-width: 150px;
-    margin-right: 10px;
-    cursor: pointer;
-    transition: transform 0.3s, box-shadow 0.3s;
+  max-width: 150px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition:
+    transform 0.3s,
+    box-shadow 0.3s;
+  border-radius: 10px;
 }
 
 .gallery img:hover {
-    transform: scale(1.1);
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .lightbox {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    padding-top: 60px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .lightbox-content {
-    margin: auto;
-    display: block;
-    max-width: 80%;
-    max-height: 80%;
-    animation: zoomIn 0.3s;
+  margin: auto;
+  display: block;
+  max-width: 80%;
+  max-height: 80%;
+  animation: zoomIn 0.3s;
+  border-radius: 20px;
 }
 
 @keyframes zoomIn {
-    from {transform: scale(0.5);}
-    to {transform: scale(1);}
+  from {
+    transform: scale(0.5);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 .lightbox .close {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
 }
 
 .lightbox .close:hover,
 .lightbox .close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.lightbox .prev,
+.lightbox .next {
+  position: absolute;
+  top: 50%;
+  color: white;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+  transition: 0.3s;
+}
+
+.lightbox .prev:hover,
+.lightbox .next:hover {
+  color: #bbb;
+}
+
+.lightbox .prev {
+  left: 20px;
+}
+
+.lightbox .next {
+  right: 20px;
 }
 /* THIRD */
